fix: Add-Entry-Page Spacing & Breite angepasst

--- a/frontend/src/styles/output.css
+++ b/frontend/src/styles/output.css
@@ -767,6 +767,10 @@ video {
   min-height: 100vh;
 }
 
+.min-h-\[440px\] {
+  min-height: 440px;
+}
+
 .w-10 {
   width: 2.5rem;
 }
